# Compilateur

./: Ast.c  Ast.h  CMakeLists.txt  README.md  ast.c  ast.h  buffer.c  buffer.h  codegen.c  codegen.h  example.txt  intech.txt  lexer.c  lexer.h  main.c  new_unary.c  parcer.c  parser.h  print_ast.c  print_ast.h  semantic.c  semantic.h  symbol_table.c  symbol_table.h  utils.h
